# solo

./: .env.development  .env.staging  .replit  NEXT_PROMPT.md  VERSIONING.md  app.py  backup_scheduler.py  build.sh  database.py  drizzle-to-prisma-migration.js  drizzle.config.ts  errors.py  forms.py  git_maintenance.sh  health_checks.py  index.html  main.py  migration-check.js  migrations.py  models.py  next-server-stable.js  next-server.js  next.config.js  nextjs-workflow.sh  notifications.py  package-lock.json  package.json  prisma-migration-check.js  prisma-migration.js  prisma-setup.sh  production.html  pyproject.toml  python_server.py  replit.nix  reset_db.py  run-nextjs.sh  run-server.sh  run_caliber_migration.py  server.js  setup_db.py  (+34 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.next/: _events.json  trace
api/: __init__.py  routes.py
archive/: README.md  google_auth.py  models.py
attached_assets/: Consolidated_Solo_App_Issues_Table CSV.csv  Pasted--0-2025-02-09T20-51-46-332Z-vite-hmr-file-change-local-state-replit-agent-repl-state-bin-0-202-1739134385706.txt  Pasted--Can-we-do-a-round-of-formatting-specific-changes-to-ensure-consistency-across-the-app-And-a-few-tw-1737477244218.txt  Pasted--Key-Features-section-class-mb-5-div-class-row-g-3-div--1738592110526.txt  Pasted--date-echo-Sun-09-Feb-2025-08-53-40-PM-UTC-Starting-staging-environment-Sun-09-Feb-2025--1739134452711.txt  Pasted--extends-base-html-block-content-div-class-row-justify-content-center-div-cla-1735788973449.txt  photo-1548163168-3367ff6a0ba6.avif  (+5 more)
src/: App.tsx  (+8 more)
(+197 files in other folders)
