[project]
name = "repl-nix-climbingtracker"
version = "0.1.0"
description = "Solo - A climbing performance tracking application"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "qrcode[pil]>=8.0",
    "slack-sdk>=3.34.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
]
